@@ -474,7 +474,7 @@
 			},
 
 			mceInsertLink : function(command, ui, value) {
-				var link = dom.getParent(selection.getNode(), 'a'), img, floatVal;
+				var link = dom.getParent(selection.getNode(), 'a'), img, style, class;
 
 				if (tinymce.is(value, 'string'))
 					value = {href : value};
@@ -483,21 +483,26 @@
 				value.href = value.href.replace(' ', '%20');
 
 				if (!link) {
-					// WebKit can't create links on float images for some odd reason so just remove it and restore it later
+					// WebKit can't create links on floated images for some odd reason
+					// So, just remove styles and restore it later
 					if (tinymce.isWebKit) {
 						img = dom.getParent(selection.getNode(), 'img');
 
 						if (img) {
-							floatVal = img.style.cssFloat;
-							img.style.cssFloat = null;
+							style = img.style.cssText;
+							class = img.className;
+							img.style.cssText = null;
+							img.className = null;
 						}
 					}
 
 					execNativeCommand('CreateLink', FALSE, 'javascript:mctmp(0);');
 
-					// Restore float value
-					if (floatVal)
-						img.style.cssFloat = floatVal;
+					// Restore styles
+					if (style)
+						img.style.cssText = style;
+					if (class)
+						img.className = class;
 
 					each(dom.select("a[href='javascript:mctmp(0);']"), function(link) {
 						dom.setAttribs(link, value);
