@@ -25,6 +25,7 @@ Version 3.4.3 (2011-??-??)
 	Fixed performance issue with mceInsertCommand and inserting very simple contents.
 	Fixed performance issue with older IE version and huge documents by optimizing the forced root blocks logic.
 	Fixed performance issue with table plugin where it checked for selected cells to often.
+	Fixed bug where creating a link on centered/floated image would produce an error on WebKit browsers.
 Version 3.4.2 (2011-04-07)
 	Added new 'paste_text_sticky_default' option to paste plugin, enables you to set the default state for paste as plain text.
 	Added new autoresize_bottom_margin option to autoresize plugin that enables you to add an extra margin at the bottom. Patch contributed by Andrew Ozz.
